--- a/index.html
+++ b/index.html
@@ -5,7 +5,31 @@
         <title>Run Buddy</title>
     </head>
     <body>
+        <!--navigation-->
+        <header>
         <h1>RUN BUDDY</h1>
-        What We Do What You Do Your Trainers Reach Out
+        </header>
+        <!--hero/jumbotron-->
+            <!--'what we do' section-->
+            <section>
+                <h2>What We Do</h2>
+                <!--'what you do' section-->
+                <section>
+                 <h2>What You Do</h2>   
+                    <!--'meet the trainers' section-->
+                    <section>
+                        <h2>Meet the Trainers</h2>
+                    </section>
+                    <!--'reach out' section-->
+                    <section>
+                        <h2>Reach Out</h2>
+                    </section>
+                </section>
+            </section>
+        
     </body>
+    <!--footer-->
+    <footer>
+        <h2>&#128156;Made with love by Run Buddy.</h2>
+    </footer>
 </html>
