restyling what we do

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         </section>
         <!--end hero-->       
             <!--'what we do' section-->
-            <section id="what-we-do">
+            <section id="what-we-do" class="intro">
                 <h2>What We Do</h2>
                 <p>
                     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
                 </p>
                 <!--'what you do' section-->
-                <section id="what-you-do"class="intro">
+                <section id="what-you-do"class="steps">
                  <h2>What You Do</h2>
                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse id velit veritatis neque non libero itaque labore temporibus sit voluptatibus quibusdam distinctio, maiores ex obcaecati optio, delectus, culpa suscipit provident.</p> 
                  <div>
