--- a/index.html
+++ b/index.html
@@ -65,36 +65,38 @@
         <!--end hero-->       
             <!--'what we do' section-->
             <section id="what-we-do" class="intro">
-                <h2>What We Do</h2>
+                <h2 class="section-title primary-border">What We Do</h2>
                 <p>
                     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
                 </p>
                 <!--'what you do' section-->
                 <section id="what-you-do"class="steps">
-                 <h2>What You Do</h2>
-                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse id velit veritatis neque non libero itaque labore temporibus sit voluptatibus quibusdam distinctio, maiores ex obcaecati optio, delectus, culpa suscipit provident.</p> 
+                 <h2 class="section-title secondary-border">What You Do</h2>
+                 <p>
+                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse id velit veritatis neque non libero itaque labore temporibus sit voluptatibus quibusdam distinctio, maiores ex obcaecati optio, delectus, culpa suscipit provident.
+                 </p> 
                  <div>
                      <!--insert this img element-->
                      <img src="assets/images/step-1.svg" alt="" />
-                     <h3>Step 1: Fill Out the Form Above</h3>
+                     <h3>Step 1: <span>Fill Out the Form Above</span></h3>
                      <p>You're already here, so why not?</p>
                  </div>  
 
                  <div>
                      <img src="assets/images/step-2.svg" alt="" />
-                     <h3>Step 2: Consult with One of Our Trainers.</h3>
+                     <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
                      <p>Are you hear to build muscle, lose weight, of just feel good?</p>
                  </div>
 
                  <div>
                      <img src="assets/images/step-3.svg" alt="" />
-                     <h3>Step 3: Get Running.</h3>
+                     <h3>Step 3: <span>Get Running.</span></h3>
                      <p>Hit the ground running (literally) once your trainer lays our your plan.</p>
                  </div>
 
                  <div>
-                     <img src="assets/images/step-4.svg"
-                     <h3>Step 4: See Results.</h3>
+                     <img src="assets/images/step-4.svg"/>
+                     <h3>Step 4: <span>See Results.</span></h3>
                      <p>Bi-weekly checkins with your trainer will keep you focused</p>
                  </div>
                     <!--'meet the trainers' section-->
