--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <!--navigation-->
         <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            <a href="/">
+              RUN BUDDY</a>
         </h1>
         <nav>
             <!--Unordered list element-->
@@ -69,6 +70,7 @@
                 <p>
                     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
                 </p>
+            </section>    
                 <!--'what you do' section-->
                 <section id="what-you-do"class="steps">
                  <h2 class="section-title secondary-border">What You Do</h2>
@@ -139,12 +141,35 @@
                             </div>
                         </article>
                     </section>
+
                     <!--'reach out' section-->
                     <section id="reach-out">
                         <h2>Reach Out</h2>
+                        <div class="contact-info"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13782.989867865466!2d-97.752237212054!3d30.27277574046357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b50a22f2576f%3A0xfded6e1aca5cba6!2sDowntown%20Austin%2C%20Austin%2C%20TX!5e0!3m2!1sen!2sus!4v1643611250600!5m2!1sen!2sus" 
+                            width="400" 
+                            height="400" 
+                            style="border:0;"
+                            allowfullscreen="" 
+                            loading="lazy">
+                        </iframe>
+                    </div>
+                    <div>
+                        <h3>Run Buddy</h3>
+                        <p>
+                            Any questions or concerns before signing up?
+                            <br />
+                            Let us know and we'll be happy to talk to you!
+                        </p>
+                        <address>
+                            55 Main Street <br />
+                            Some Town, Ca <br />
+                            12345 <br />
+                            P: 555.RUN.BUDZ (555.786.2839<br />
+                            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                        </address>
+                    </div>
                     </section>
-                </section>
-            <!--/section>-->
+                
         
     </body>
     <!--footer-->
