--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
                 </li>
             </ul>
         </nav>
-        </header>        
+        </header>
         <!--hero/jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis numquam animi quod iure eum commodi accusamus quo laborum molestias nemo ipsum minus dicta, placeat maxime voluptatum magnam quas deleniti error?
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a contult</p>
