--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@
                     <section id="reach-out" class="contact">
                         <h2 class="section-title secondary-border">Reach Out</h2>
                         <div class="contact-info">
+                            <div>
+                                <h3>Contact Us</h3>
+                                <form>
+                                    <label for="contact-name">Your Name</label>
+                                    <input type="text" id="contact-name" placeholder="Your Name" />
+
+                                    <label for="contact-message">Message</label>
+                                    <textarea type="text" id="contact-message" placeholder="Message"></textarea>
+
+                                    <button type="submit">Submit</button>
+                                </form>
+                            </div>
                             <iframe 
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13782.989867865466!2d-97.752237212054!3d30.27277574046357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b50a22f2576f%3A0xfded6e1aca5cba6!2sDowntown%20Austin%2C%20Austin%2C%20TX!5e0!3m2!1sen!2sus!4v1643611250600!5m2!1sen!2sus" 
                             style="border:0;"
