add flexbox to what we do

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <!--hero/jumbotron-->
         <section class="hero">
             <div class="hero-cta">
+                <div class="flex-row">
                 <h2>Start Building Habits.</h2>
+                </div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis numquam animi quod iure eum commodi accusamus quo laborum molestias nemo ipsum minus dicta, placeat maxime voluptatum magnam quas deleniti error?
                 </p>
@@ -72,14 +74,20 @@
         <!--end hero-->       
             <!--'what we do' section-->
             <section id="what-we-do" class="intro">
+                <div class="flex-row">
                 <h2 class="section-title primary-border">What We Do</h2>
+                </div>
+                <div class="flex-row">
                 <p>
                     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
                 </p>
+                </div>
             </section>    
                 <!--'what you do' section-->
-                <section id="what-you-do"class="steps">
+                <section id="what-you-do"class="steps" >
+                 <div class="flex-row">
                  <h2 class="section-title secondary-border">What You Do</h2>
+                 </div>
                  <p>
                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse id velit veritatis neque non libero itaque labore temporibus sit voluptatibus quibusdam distinctio, maiores ex obcaecati optio, delectus, culpa suscipit provident.
                  </p> 
@@ -108,10 +116,12 @@
                      <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </section>     </div>
                     <!--'meet the trainers' section-->
-                    <section id="your-trainers" class="trainers">
+                    <section id="your-trainers" class="trainers" >
+                        <div class="flex-row">
                         <h2 class="section-title primary-border">
                             Meet the Trainers
                         </h2>
+                        </div>
                         <article class="trainer">
                             <img src="assets/images/trainer-1.jpg" alt="Trainer Arron Stephens">
                             <div class="trainer-bio text-left">
@@ -149,8 +159,10 @@
                     </section>
 
                     <!--'reach out' section-->
-                    <section id="reach-out" class="contact">
+                    <section id="reach-out" class="contact" >
+                        <div class="flex-row">
                         <h2 class="section-title secondary-border">Reach Out</h2>
+                        </div>
                         <div class="contact-info">
                             <div>
                                 <h3>Contact Us</h3>
