--- a/index.html
+++ b/index.html
@@ -91,45 +91,74 @@
                  <p>
                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse id velit veritatis neque non libero itaque labore temporibus sit voluptatibus quibusdam distinctio, maiores ex obcaecati optio, delectus, culpa suscipit provident.
                  </p> 
-                 <div>
-                     <!--insert this img element-->
-                     <img src="assets/images/step-1.svg" alt="" />
-                     <h3>Step 1: <span>Fill Out the Form Above</span></h3>
-                     <p>You're already here, so why not?</p>
-                 </div>  
+                 <div class="step">                                     
+                     <h3>Step 1: </h3>
+                     <div class="step-info">
+                         <div class="step-img">
+                            <img src="assets/images/step-1.svg" alt="" />
+                         </div>
+                         <div class="step-text">
+                            <h4>Fill Out the Form Above</h4>
+                            <p>You're already here, so why not?</p>
+                         </div>
+                     </div>                     
+                 </div> 
 
-                 <div>
-                     <img src="assets/images/step-2.svg" alt="" />
-                     <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                     <p>Are you hear to build muscle, lose weight, of just feel good?</p>
+                 <div class="step">
+                     <h3>Step 2:</h3>
+                     <div class="step-info">
+                         <div class="step-img">
+                            <img src="assets/images/step-2.svg" alt="" />
+                        </div>
+                        <div class="step-text">
+                            <h4>Consult with One of Our Trainers.</h4>
+                            <p>Are you hear to build muscle, lose weight, of just feel good?</p>
+                        </div>
+                     </div>
                  </div>
 
-                 <div>
-                     <img src="assets/images/step-3.svg" alt="" />
-                     <h3>Step 3: <span>Get Running.</span></h3>
-                     <p>Hit the ground running (literally) once your trainer lays our your plan.</p>
+                 <div class="step">                     
+                     <h3>Step 3:</h3>
+                     <div class="step-info">
+                         <div class="step-img">
+                            <img src="assets/images/step-3.svg" alt="" /> 
+                         </div>
+                         <div class="step-text">
+                            <h4>Get Running.</h4>
+                            <p>Hit the ground running (literally) once your trainer lays our your plan.</p>
+                         </div>
+                     </div>
                  </div>
 
-                 <div>
-                     <img src="assets/images/step-4.svg"/>
-                     <h3>Step 4: <span>See Results.</span></h3>
-                     <p>Bi-weekly checkins with your trainer will keep you focused</p>
-            </section>     </div>
+                 <div class="step">                     
+                     <h3>Step 4:</h3>
+                     <div class="step-info">
+                         <div class="step-img">
+                            <img src="assets/images/step-4.svg"/> 
+                         </div>
+                         <div class="step-text">   
+                            <h4>See Results.</h4>
+                            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                         </div>
+                     </div>       
+                 </div>
+
+                </section>
                     <!--'meet the trainers' section-->
                     <section id="your-trainers" class="trainers" >
                         <div class="flex-row">
-                        <h2 class="section-title primary-border">
+                            <h2 class="section-title primary-border">
                             Meet the Trainers
-                        </h2>
+                            </h2>
                         </div>
                         <article class="trainer">
                             <img src="assets/images/trainer-1.jpg" alt="Trainer Arron Stephens">
                             <div class="trainer-bio text-left">
                                 <h3>Arron Stephens</h3>
                                 <h4>Speed / Strength</h4>
-                            <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aliquam quo nobis totam fugit dolore? Dolor illum accusamus dicta placeat, quibusdam earum, sunt sapiente itaque iusto porro libero adipisci tenetur?
-                            </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aliquam quo nobis totam fugit dolore? Dolor illum accusamus dicta placeat, quibusdam earum, sunt sapiente itaque iusto porro libero adipisci tenetur?
+                                </p>
                             </div>
                         </article>
                         
