--- a/index.html
+++ b/index.html
@@ -145,17 +145,18 @@
 
                 </section>
                     <!--'meet the trainers' section-->
-                    <section id="your-trainers" class="trainers" >
+                    <section id="your-trainers">
                         <div class="flex-row">
                             <h2 class="section-title primary-border">
                             Meet the Trainers
                             </h2>
                         </div>
+                      <div class="trainers">
                         <article class="trainer">
                             <img src="assets/images/trainer-1.jpg" alt="Trainer Arron Stephens">
-                            <div class="trainer-bio text-left">
-                                <h3>Arron Stephens</h3>
-                                <h4>Speed / Strength</h4>
+                            <div class="trainer-bio">
+                                <h3 class="trainer-name">Arron Stephens</h3>
+                                <h4 class="trainer-role">Speed / Strength</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt aliquam quo nobis totam fugit dolore? Dolor illum accusamus dicta placeat, quibusdam earum, sunt sapiente itaque iusto porro libero adipisci tenetur?
                                 </p>
@@ -164,27 +165,28 @@
                         
                         <!--second trainer bio-->
                         <article class="trainer">
-                            <div class="trainer-bio text-right">
-                                <h3>Joanna Gill</h3>
-                                <h4>Endurance</h4>
+                            <img src="assets/images/trainer-2.jpg" alt="Trainer Joanna Gill">
+                            <div class="trainer-bio">
+                                <h3 class="trainer-name">Joanna Gill</h3>
+                                <h4 class="trainer-role">Endurance</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at laborum omnis sed. Ad rerum, provident sed quia a dicta necessitatibus laudantium non nihil quae veritatis deserunt quo doloribus voluptatibus.
                                 </p>
-                            </div>
-                            <img src="assets/images/trainer-2.jpg" alt="Trainer Joanna Gill">
+                            </div>                            
                         </article>
                         
                         <!--third trainer bio-->
                         <article class="trainer">
                             <img src="assets/images/trainer-3.jpg" alt="trainer harry smith">
-                            <div class="trainer-bio text-left">
-                                <h3>Harry "the Headband" Smith</h3>
-                                <h4>Strength</h4>
+                            <div class="trainer-bio">
+                                <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                                <h4 class="trainer-role">Strength</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde impedit alias, autem maxime dolores sunt adipisci cupiditate magnam minus provident tempore dicta sit vero dolor illo. Natus ipsam perspiciatis expedita.
                                 </p>
                             </div>
                         </article>
+                      </div>
                     </section>
 
                     <!--'reach out' section-->
