initial setup of media queries

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
@@ -83,7 +84,7 @@
                 </p>
                 </div>
             </section>    
-                <!--'what you do' section-->
+            <!--'what you do' section-->
                 <section id="what-you-do"class="steps" >
                  <div class="flex-row">
                  <h2 class="section-title secondary-border">What You Do</h2>
@@ -92,7 +93,7 @@
                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse id velit veritatis neque non libero itaque labore temporibus sit voluptatibus quibusdam distinctio, maiores ex obcaecati optio, delectus, culpa suscipit provident.
                  </p> 
                  <div class="step">                                     
-                     <h3>Step 1: </h3>
+                    <h3>Step 1: </h3>
                      <div class="step-info">
                          <div class="step-img">
                             <img src="assets/images/step-1.svg" alt="" />
@@ -144,7 +145,7 @@
                  </div>
 
                 </section>
-                    <!--'meet the trainers' section-->
+                <!--'meet the trainers' section-->
                     <section id="your-trainers">
                         <div class="flex-row">
                             <h2 class="section-title primary-border">
