final CSS clean-up

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8" />
-        <title>Run Buddy</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />        
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Run Buddy</title>
     </head>
     <body>
         <!--navigation-->
@@ -13,10 +13,8 @@
             <a href="/">
               RUN BUDDY</a>
         </h1>
-        <nav>
-            <!--Unordered list element-->
-            <ul>
-                <!--List item element-->
+        <nav>            
+            <ul>                
                 <li>
                     <a href="#what-we-do">What We Do</a>
                 </li>
@@ -34,18 +32,19 @@
         </header>
         <!--hero/jumbotron-->
         <section class="hero">
-            <div class="hero-cta">
-                <div class="flex-row">
-                <h2>Start Building Habits.</h2>
-                </div>
+            <div class="hero-cta">                
+                <h2>Start Building Habits.</h2>                
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis numquam animi quod iure eum commodi accusamus quo laborum molestias nemo ipsum minus dicta, placeat maxime voluptatum magnam quas deleniti error?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Reiciendis numquam animi quod iure eum commodi accusamus 
+                    quo laborum molestias nemo ipsum minus dicta, placeat maxime 
+                    voluptatum magnam quas deleniti error?
                 </p>
             </div>
+
             <div class="hero-form">
                 <h3>Get Started Today</h3>
-                <p>Fill out this form and one of our trainers will schedule a contult</p>
-                <!--Add form element-->
+                <p>Fill out this form and one of our trainers will schedule a contult</p>                
                 <form>
                         <label for="name">Enter full name:</label>
                         <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
@@ -66,10 +65,10 @@
                     </p>
                     <p>
                         <span class="checkbox-wrapper">
+                            <input type="checkbox" name="age-confirm" id="checkbox" />
                             <label for="checkbox">
                                 I acknowledge that I am at least 18 years of age
-                            </label>
-                            <input type="checkbox" name="age-confirm" id="checkbox" />
+                            </label>                            
                         </span>                       
                     </p>
                     <button type="submit">
@@ -82,18 +81,25 @@
         <!--'what we do' section-->
             <section id="what-we-do" class="intro">
                 <div class="flex-row">
-                <h2 class="section-title primary-border">What We Do</h2>
+                <h2 class="section-title primary-border">
+                    What We Do</h2>
                 </div>
                 <div class="flex-row">
                 <p>
-                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo 
+                    Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave 
+                    you probably haven't heard of them single-origin coffee Vice fanny 
+                    pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
+                     Thundercats viral bitters flannel meggings narwhal Marfa Schlitz 
+                     sustainable Intelligentsia umami deep v craft
                 </p>
                 </div>
             </section>    
             <!--'what you do' section-->
                 <section id="what-you-do"class="steps" >
                  <div class="flex-row">
-                 <h2 class="section-title secondary-border">What You Do</h2>
+                 <h2 class="section-title secondary-border">
+                     What You Do</h2>
                  </div>
                  <p>
                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse id velit veritatis neque non libero itaque labore temporibus sit voluptatibus quibusdam distinctio, maiores ex obcaecati optio, delectus, culpa suscipit provident.
@@ -246,7 +252,7 @@
                         <h2>&#128156;Made with love by Run Buddy.</h2>
                         <div>
                             <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
-                            &copy; 2019 Run Buddy, Inc.
+                            &copy; 2022 Run Buddy, Inc.
                         </div>
                     </footer>
                 </body>
